API consistency: use 'name' everywhere, not 'tag_name' in some places
